fix(EmulatedBoldText): fix overflow for focus outline

--- a/packages/components/src/components/EmulatedBoldText/EmulatedBoldText.module.scss
+++ b/packages/components/src/components/EmulatedBoldText/EmulatedBoldText.module.scss
@@ -10,7 +10,5 @@
   height: 0;
   line-height: 0;
   visibility: hidden;
-
-  /* fixes focus outline */
-  margin-top: calc(var(--size-px--s) * -1);
+  overflow: clip;
 }
